added style for navigation bar

--- a/index.html
+++ b/index.html
@@ -2,28 +2,32 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	
 	<title>Resume</title>
 </head>
 
 <body>
-  <nav>
-    <ul>
-      <li><a href="index.html">Resume</a></li>
-	  <li><a href="favorite_games.html">Games</a></li>
-	  <li><a href="vietnam_attraction.html">Vietnam</a></li>
-    </ul>
+  <nav id="main-navbar">
+    <div id="navbar-container">
+      <ul>
+        <li id "onpage"><a href="index.html">Resume</a></li>
+	    <li><a href="favorite_games.html">Games</a></li>
+	    <li><a href="vietnam_attraction.html">Vietnam</a></li>
+      </ul>
+	</div>
   </nav>
   <h1>Hieu Do</h1>
  
   <section>
     <h3>Contact Info</h3>
     <p>(773)-***-****</p>
-	<p>hdo2@hawk.iit.edu</p>	
+	<p>hdo2@hawk.iit.edu</p>
+	<p><a href="https://www.linkedin.com/in/hieu-do-015159246/">LinkedIn Profile</a></p>
   </section>
   
   <section>
     <h3>Summary</h3> 
-    <p>Incoming Freshman at Illinois Tech with Cybersecurity as intended major. Looking toward a fulfilling college life and obtaining necessary life experience and skills before setting out to contribute to society.</p>
+    <p>First year Cybersecurity major at Illinois Tech. Looking toward a fulfilling college life and obtaining life experience and skills before setting out to contribute to society. Current goal is to study to become a pen-tester. Future goal is to find a job in Cybersecurity field and attend DEF CON.</p>
   </section>
   
   <section>
@@ -66,7 +70,7 @@
 	  <li>Teamwork</li>
 	  <li>Microsoft Word/Excel</li>
 	  <li>Java</li>
-	  <li>Basic Forensics</li>
+	  <li>Basic Computer Forensics</li>
     </ul>
   </section>
 </body>
