--- a/vietnam_attraction.html
+++ b/vietnam_attraction.html
@@ -2,16 +2,20 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<title>Famous Vietnam Tourist Attraction</title>
 </head>
 
 <body>
-  <nav>
-    <ul>
-	  <li><a href="index.html">Resume</a></li>
-	  <li><a href="favorite_games.html">Games</a></li>
-	  <li><a href="vietnam_attraction.html">Vietnam</a></li>
-	</ul>
+  <nav id="main-navbar">
+    <div id="navbar-container">
+      <ul>
+        <li id "onpage"><a href="index.html">Resume</a></li>
+	    <li><a href="favorite_games.html">Games</a></li>
+	    <li><a href="vietnam_attraction.html">Vietnam</a></li>
+      </ul>
+	</div>
   </nav>
   <h1>Famous Vietnam Tourist Attraction</h1>
   <section>
