--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <nav id="main-navbar">
     <div id="navbar-container">
       <ul>
-        <li id "onpage"><a href="index.html">Resume</a></li>
+        <li id="onpage"><a href="index.html">Resume</a></li>
 	    <li><a href="favorite_games.html">Games</a></li>
 	    <li><a href="vietnam_attraction.html">Vietnam</a></li>
       </ul>
