--- a/favorite_games.html
+++ b/favorite_games.html
@@ -8,15 +8,18 @@
 </head>
 
 <body>
-  <nav id="main-navbar">
-    <div id="navbar-container">
-      <ul>
-        <li id="onpage"><a href="index.html">Resume</a></li>
-	    <li><a href="favorite_games.html">Games</a></li>
-	    <li><a href="vietnam_attraction.html">Vietnam</a></li>
-      </ul>
-	</div>
-  </nav>
+  <header>
+    <nav id="main-navbar">
+      <div id="navbar-container">
+        <ul>
+          <li id="onpage"><a href="index.html">Resume</a></li>
+	      <li><a href="#">Games</a></li>
+	      <li><a href="vietnam_attraction.html">Vietnam</a></li>
+        </ul>
+	  </div>
+    </nav>
+  </header>
+  
   <h1>My Top 3 Games</h1>
   <section>
 	<h3>1.Punishing: Gray Raven</h3>
