--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
 </head>
 
 <body>
-  <nav id="main-navbar">
-    <div id="navbar-container">
-      <ul>
-        <li id="onpage"><a href="index.html">Resume</a></li>
-	    <li><a href="favorite_games.html">Games</a></li>
-	    <li><a href="vietnam_attraction.html">Vietnam</a></li>
-      </ul>
-	</div>
-  </nav>
+  <header>
+    <nav id="main-navbar">
+      <div id="navbar-container">
+        <ul>
+          <li id="onpage"><a href="#">Resume</a></li>
+	      <li><a href="favorite_games.html">Games</a></li>
+	      <li><a href="vietnam_attraction.html">Vietnam</a></li>
+        </ul>
+	  </div>
+    </nav>
+  </header>
+  
   <h1>Hieu Do</h1>
  
   <section>
