--- a/vietnam_attraction.html
+++ b/vietnam_attraction.html
@@ -8,15 +8,18 @@
 </head>
 
 <body>
-  <nav id="main-navbar">
-    <div id="navbar-container">
-      <ul>
-        <li id="onpage"><a href="index.html">Resume</a></li>
-	    <li><a href="favorite_games.html">Games</a></li>
-	    <li><a href="vietnam_attraction.html">Vietnam</a></li>
-      </ul>
-	</div>
-  </nav>
+  <header>
+    <nav id="main-navbar">
+      <div id="navbar-container">
+        <ul>
+          <li id="onpage"><a href="index.html">Resume</a></li>
+	      <li><a href="favorite_games.html">Games</a></li>
+	      <li><a href="#">Vietnam</a></li>
+        </ul>
+	  </div>
+    </nav>
+  </header>
+  
   <h1>Famous Vietnam Tourist Attraction</h1>
   <section>
     <h3>Ha Long Bay</h3>
