--- a/favorite_games.html
+++ b/favorite_games.html
@@ -12,8 +12,8 @@
     <nav id="main-navbar">
       <div id="navbar-container">
         <ul>
-          <li id="onpage"><a href="index.html">Resume</a></li>
-	      <li><a href="#">Games</a></li>
+          <li><a href="index.html">Resume</a></li>
+	      <li id="onpage"><a href="#">Games</a></li>
 	      <li><a href="vietnam_attraction.html">Vietnam</a></li>
         </ul>
 	  </div>
