--- a/vietnam_attraction.html
+++ b/vietnam_attraction.html
@@ -12,9 +12,9 @@
     <nav id="main-navbar">
       <div id="navbar-container">
         <ul>
-          <li id="onpage"><a href="index.html">Resume</a></li>
+          <li><a href="index.html">Resume</a></li>
 	      <li><a href="favorite_games.html">Games</a></li>
-	      <li><a href="#">Vietnam</a></li>
+	      <li id="onpage"><a href="#">Vietnam</a></li>
         </ul>
 	  </div>
     </nav>
