--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+<div id="pg1_wrapper">
   <header>
     <nav id="main-navbar">
       <div id="navbar-container">
@@ -20,62 +21,74 @@
     </nav>
   </header>
   
-  <h1>Hieu Do</h1>
+  <div id="name">
+    <section>
+      <h1>Hieu Do</h1>
+	</section>
+  </div>
+  
+  <div id="summary">
+    <section>
+      <h3>Summary</h3> 
+      <p>First year Cybersecurity major at Illinois Tech. Looking toward a fulfilling college life and obtaining life experience and skills before setting out to contribute to society. Current goal is to study to become a pen-tester. Future goal is to find a job in Cybersecurity field and attend DEF CON.</p>
+    </section>
+  
+    <section>
+      <h3>Education</h3>
+      <p>Illinois Institute of Technology</p>
+    </section>
+  </div>
+  
+  <div id="contact_skill">
+    <section>
+      <h3>Contact Info</h3>
+      <p>(773)-***-****</p>
+	  <p>hdo2@hawk.iit.edu</p>
+	  <p><a href="https://www.linkedin.com/in/hieu-do-015159246/">LinkedIn Profile</a></p>
+    </section>
+  
+    <section>
+      <h3>Skills</h3>
+      <ul>
+	    <li>Tutoring</li>
+	    <li>Bilingual/Translation (English & Vietnamese)</li>
+	    <li>Teamwork</li>
+	    <li>Microsoft Word/Excel</li>
+	    <li>Java</li>
+	    <li>Basic Computer Forensics</li>
+      </ul>
+    </section>
+  </div>
+  
+  <div id="experience">
+    <section>
+      <h3>Extracurricular</h3>
+      <ul>
+	    <li>Exelon Summer Institute - IIT</li>
+	    <li>City of Chicago Math League</li>
+	    <li>Quang Minh Temple Volunteer</li>
+	    <li>Chicago Corinthian Yacht Club - Montrose Harbor</li>
+	  </ul>
+    </section>
+  
+    <section>
+      <h3>Experience</h3>
+	  <h4>Vietnamese Association of Illinois - Youth Program Internship</h4>
+	  <p><strong>Responsibility:</strong></p>
+      <ul>
+	    <li>Supervised adolescents (age 10 - 15)</li>
+	    <li>Designed and managed group activities</li>
+	    <li>Provided academic assistance/tutoring</li>
+      </ul>		
+	  <h4>Election Day - Student Poll Worker</h4>
+	  <p><strong>Responsibility:</strong></p>
+	  <p>Verified and sorted documents</p>	
+	  <h4>Hivestorm Contest</h4>
+	  <p><strong>Description:</strong></p>
+      <p>Joined a team and participated in Hivestorm Forensics Contest.</p>
+    </section>
+    </div>
  
-  <section>
-    <h3>Contact Info</h3>
-    <p>(773)-***-****</p>
-	<p>hdo2@hawk.iit.edu</p>
-	<p><a href="https://www.linkedin.com/in/hieu-do-015159246/">LinkedIn Profile</a></p>
-  </section>
-  
-  <section>
-    <h3>Summary</h3> 
-    <p>First year Cybersecurity major at Illinois Tech. Looking toward a fulfilling college life and obtaining life experience and skills before setting out to contribute to society. Current goal is to study to become a pen-tester. Future goal is to find a job in Cybersecurity field and attend DEF CON.</p>
-  </section>
-  
-  <section>
-    <h3>Education</h3>
-    <p>Illinois Institute of Technology</p>
-  </section>
-  
-  <section>
-    <h3>Extracurricular</h3>
-    <ul>
-	  <li>Exelon Summer Institute - IIT</li>
-	  <li>City of Chicago Math League</li>
-	  <li>Quang Minh Temple Volunteer</li>
-	  <li>Chicago Corinthian Yacht Club - Montrose Harbor</li>
-	</ul>
-  </section>
-  
-  <section>
-    <h3>Experience</h3>
-	<h4>Vietnamese Association of Illinois - Youth Program Internship</h4>
-	<p><strong>Responsibility:</strong></p>
-    <ul>
-	  <li>Supervised adolescents (age 10 - 15)</li>
-	  <li>Designed and managed group activities</li>
-	  <li>Provided academic assistance/tutoring</li>
-    </ul>		
-	<h4>Election Day - Student Poll Worker</h4>
-	<p><strong>Responsibility:</strong></p>
-	<p>Verified and sorted documents</p>	
-	<h4>Hivestorm Contest</h4>
-	<p><strong>Description:</strong></p>
-    <p>Joined a team and participated in Hivestorm Forensics Contest.</p>
-  </section>
-  
-  <section>
-    <h3>Skills</h3>
-    <ul>
-	  <li>Tutoring</li>
-	  <li>Bilingual/Translation (English & Vietnamese)</li>
-	  <li>Teamwork</li>
-	  <li>Microsoft Word/Excel</li>
-	  <li>Java</li>
-	  <li>Basic Computer Forensics</li>
-    </ul>
-  </section>
+</div>
 </body>
 </html>
