--- a/index.html
+++ b/index.html
@@ -21,33 +21,22 @@
     </nav>
   </header>
   
-  <div id="name">
-    <section>
+    <section id="name">
       <h1>Hieu Do</h1>
 	</section>
-  </div>
   
-  <div id="summary">
-    <section>
+    <section id="summary">
       <h3>Summary</h3> 
       <p>First year Cybersecurity major at Illinois Tech. Looking toward a fulfilling college life and obtaining life experience and skills before setting out to contribute to society. Current goal is to study to become a pen-tester. Future goal is to find a job in Cybersecurity field and attend DEF CON.</p>
-    </section>
-  
-    <section>
       <h3>Education</h3>
       <p>Illinois Institute of Technology</p>
     </section>
-  </div>
   
-  <div id="contact_skill">
-    <section>
+    <section id="contact_skill">
       <h3>Contact Info</h3>
       <p>(773)-***-****</p>
 	  <p>hdo2@hawk.iit.edu</p>
 	  <p><a href="https://www.linkedin.com/in/hieu-do-015159246/">LinkedIn Profile</a></p>
-    </section>
-  
-    <section>
       <h3>Skills</h3>
       <ul>
 	    <li>Tutoring</li>
@@ -58,10 +47,8 @@
 	    <li>Basic Computer Forensics</li>
       </ul>
     </section>
-  </div>
   
-  <div id="experience">
-    <section>
+    <section id="experience">
       <h3>Extracurricular</h3>
       <ul>
 	    <li>Exelon Summer Institute - IIT</li>
@@ -69,9 +56,7 @@
 	    <li>Quang Minh Temple Volunteer</li>
 	    <li>Chicago Corinthian Yacht Club - Montrose Harbor</li>
 	  </ul>
-    </section>
-  
-    <section>
+ 
       <h3>Experience</h3>
 	  <h4>Vietnamese Association of Illinois - Youth Program Internship</h4>
 	  <p><strong>Responsibility:</strong></p>
@@ -87,8 +72,7 @@
 	  <p><strong>Description:</strong></p>
       <p>Joined a team and participated in Hivestorm Forensics Contest.</p>
     </section>
-    </div>
- 
+
 </div>
 </body>
 </html>
