update css for page 1

--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
 </head>
 
 <body>
- <div id="pg1_wrapper">
   <header>
-    <nav id="main-navbar">
-      <div id="navbar-container">
+    <nav class="main-navbar">
+      <div class="navbar-container">
         <ul>
-          <li id="onpage"><a href="#">Resume</a></li>
+          <li class="onpage"><a href="#">Resume</a></li>
 	      <li><a href="favorite_games.html">Games</a></li>
 	      <li><a href="vietnam_attraction.html">Vietnam</a></li>
         </ul>
@@ -21,18 +20,19 @@
     </nav>
   </header>
   
-  <section id="name">
+<div class="pg1_wrapper">
+  <section class="name">
     <h1>Hieu Do</h1>
   </section>
   
-  <section id="summary">
+  <section class="summary">
     <h3>Summary</h3> 
     <p>First year Cybersecurity major at Illinois Tech. Looking toward a fulfilling college life and obtaining life experience and skills before setting out to contribute to society. Current goal is to study to become a pen-tester. Future goal is to find a job in Cybersecurity field and attend DEF CON.</p>
     <h3>Education</h3>
     <p>Illinois Institute of Technology</p>
    </section>
   
-  <section id="contact_skill">
+  <section class="contact_skill">
     <h3>Contact Info</h3>
     <p>(773)-***-****</p>
 	<p>hdo2@hawk.iit.edu</p>
@@ -48,7 +48,7 @@
     </ul>
   </section>
   
-  <section id="experience">
+  <section class="experience">
     <h3>Extracurricular</h3>
     <ul>
 	  <li>Exelon Summer Institute - IIT</li>
