update page1 css

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
 <body>
   <header>
-    <nav class="main-navbar">
-      <div class="navbar-container">
+    <nav id="main-navbar">
+      <div id="navbar-container">
         <ul>
-          <li class="onpage"><a href="#">Resume</a></li>
+          <li id="onpage"><a href="#">Resume</a></li>
 	      <li><a href="favorite_games.html">Games</a></li>
 	      <li><a href="vietnam_attraction.html">Vietnam</a></li>
         </ul>
