--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     <h3>Summary</h3> 
     <p>First year Cybersecurity major at Illinois Tech. Looking toward a fulfilling college life and obtaining life experience and skills before setting out to contribute to society. Current goal is to study to become a pen-tester. Future goal is to find a job in Cybersecurity field and attend DEF CON.</p>
     <h3>Education</h3>
-    <p>Illinois Institute of Technology</p>
+	<p>Senn High School (2018 - 2022)</p>
+    <p>Illinois Institute of Technology (Present)</p>
    </section>
   
   <section class="contact_skill">
