--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <h3>Skills</h3>
     <ul>
 	  <li>Tutoring</li>
-	  <li>Bilingual/Translation (English & Vietnamese)</li>
+	  <li>Language: English & Vietnamese</li>
 	  <li>Teamwork</li>
 	  <li>Microsoft Word/Excel</li>
 	  <li>Java</li>
