--- a/favorite_games.html
+++ b/favorite_games.html
@@ -7,7 +7,7 @@
   <title>My Top 3 Games</title>
 </head>
 
-<body>
+<body class="page2">
 <div class="page2_wrapper">
   <header>
     <nav id="main-navbar">
@@ -38,7 +38,7 @@
 	<h4>Description</h4>
 	<p>Guardian Tales is a 2020 RPG video game developed by Kong Studios. The game tells the story of the Guardian Knight, a newly recruited member of the Guardians, Kanterbury Kingdom's royal guard. After completing his/her first training as a Guardian, the Guardian Knight embarks on a journey to recover the almighty Champion Sword and to find 12 powerful Champions in order to obtain the strength to push back the vile Invader who occupied the Earth.</p>
 	<img src="media/gt.png" alt="Guardian Tales Image">
-	<p>This game has a lot mechanics that blends really well together, from old-style RPG, hack-and-slash to mordern gacha. The gameplay style is up to the player weather they want to have a casual play through with the storyline or challenging themselves through brain-wrecking puzzles, overpowered enemies, and intense PVP. And the best charm of this game is the ridiculous amount of references to famous book, movies, locations, other games, etc, despite being a pixel game (you can tell by the name "Kanterbury" which is a refernce to the book <em>The Canterbury Tales</em> by Geoffrey Chaucer. I like to call this game the "hotpot" of video game.</p>
+	<p>This game has a lot mechanics that blends really well together, from old-style RPG, hack-and-slash to mordern gacha. The gameplay style is up to the player weather they want to have a casual play through with the storyline or challenging themselves through brain-wrecking puzzles, overpowered enemies, and intense PVP. And the best charm of this game is the ridiculous amount of references to books, movies, locations, other games, etc., despite being a pixel game (you can tell by the name "Kanterbury" which is a refernce to the book <em>The Canterbury Tales</em> by Geoffrey Chaucer.) I like to call this game the "hotpot" of video game.</p>
   </section>
 
   <section class="content-box">
