--- a/favorite_games.html
+++ b/favorite_games.html
@@ -30,7 +30,7 @@
 	<p>This game is the top on my list because of its unique combat mechanic that is fast-paced and heavily skill-based. The characcter designs are detailed with cool artstyle, actual character development, and godlike gameplay animation (seriously way too good). The story is heavy,  has good depth and can be really emotional. The BGM are bangers that elevates the gameplay experience considerabily. Not to mention the chibi characters are super adorable. 
     <h4>Gameplay Demonstration</h4>
 	<video controls>
-	<source src="media/pgr_demo.mp4" type="video/mp4"> </video>
+	<source src="media/pgr_demo.mp4" type="video/mp4" class="video"> </video>
   </section>
   
   <section class="content-box">
