--- a/favorite_games.html
+++ b/favorite_games.html
@@ -21,7 +21,7 @@
     </nav>
   </header>
   
-  <h1>My Top 3 Games</h1>
+  <h1 class="title">My Top 3 Games</h1>
   <section class="content-box" class="pgr">
 	<h3>Punishing: Gray Raven</h3>
 	<h4>Description</h4>
