--- a/vietnam_attraction.html
+++ b/vietnam_attraction.html
@@ -20,7 +20,7 @@
     </nav>
   </header>
   
-  <h1>Famous Vietnam Tourist Attraction</h1>
+  <h1 class="title">Famous Vietnam Tourist Attraction</h1>
   <section>
     <h3>Ha Long Bay</h3>
 	<img src="media/ha_long_bay.jpg" alt="Ha Long Bay Img">
