pre-validation update

--- a/favorite_games.html
+++ b/favorite_games.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
+  <title>Resume</title>
   <title>My Top 3 Games</title>
 </head>
 
@@ -61,6 +62,7 @@
 	<img src="media/wolf.jpg" class="bottom_right">
 	<p> This game has wide variety of character with each having completely diferent playstyles, making it extremely fun to clash with other player in a contest purely base on skill and to show how much you have master a certain character. Both me and my brother enjoy this game a lot (he's really good and often bully me so I had to sneak practice behind his back to get revenge, and I did)
   </section>
- </div>
+  
+</div>
 </body>
 </html>
